Cleaned up with Intellij